syntax = "proto3";

package api.user.v1;

option go_package = "west2-video/api/user/v1;v1";

import "api/common/base.proto";

// ========= 用户通用结构（文档“用户” Schema） =========
message User {
  string id                    = 1;
  string username             = 2;
  string nickname             = 3;
  string avatar_url           = 4;
  string description          = 5;
  bool   is_follow            = 6; // 当前登录用户是否已关注该用户
  string created_at = 7;
  string updated_at = 8;
  string deleted_at = 9;
}

// ========= Service 定义 =========
service UserService {
  // 注册
  rpc Register(RegisterRequest) returns (RegisterReply);

  // 登录
  rpc Login(LoginRequest) returns (LoginReply);

  // 刷新
  rpc Refresh(RefreshRequest) returns (RefreshReply);

  // 用户信息
  rpc GetUserInfo(UserInfoRequest) returns (UserInfoReply);

  // 上传头像（当前登录用户）
  rpc UploadAvatar(UploadAvatarRequest) returns (UploadAvatarReply);

  // 获取 MFA qrcode
  rpc GetMfaQrcode(GetMfaQrcodeRequest) returns (GetMfaQrcodeReply);

  // 绑定 MFA
  rpc BindMfa(BindMfaRequest) returns (BindMfaReply);

  // 以图搜图
  rpc SearchByImage(SearchByImageRequest) returns (SearchByImageReply);
}
//========= 刷新 =========
message RefreshRequest{
  string refreshToken=1;
  string ip=2;
}
message RefreshReply {
  api.common.v1.BaseResponse base = 1;
  string access_token             = 2;
  string refresh_token            = 3;
  int64  access_expires_in        = 4; // 可选：Access 过期时间（秒）
  int64  refresh_expires_in       = 5; // 可选：Refresh 过期时间（秒）
}
// ========= 注册 =========
message RegisterRequest {
  string username = 1;
  string password = 2;
  string email    = 3;
}

message RegisterReply {
  api.common.v1.BaseResponse base = 1;
  User user                       = 2;
}

// ========= 登录 =========
message  LoginRequest {
  string username = 1;
  string password = 2;
  string ip       = 3;
}

message LoginReply {
  api.common.v1.BaseResponse base = 1;
  string access_token             = 2;
  string refresh_token            = 3;
  int64  access_expires_in        = 4; // 可选：Access 过期时间（秒）
  int64  refresh_expires_in       = 5; // 可选：Refresh 过期时间（秒）
}

// ========= 用户信息 =========
message UserInfoRequest {
  int64 user_id = 1; // 为 0 或未传时，表示当前登录用户
}

message UserInfoReply {
  api.common.v1.BaseResponse base = 1;
  User user                       = 2;
}

// ========= 上传头像 =========
message UploadAvatarRequest {
  // 当前登录用户从 Token 中获取，这里只需要文件数据
  string url = 1; // 头像原始数据（multipart/form-data 对应）
  int64 id  = 2;
}

message UploadAvatarReply {
  api.common.v1.BaseResponse base = 1;
  string avatar_url               = 2;
}

// ========= 获取 MFA qrcode =========
message GetMfaQrcodeRequest {
  int64 id=1;
  string username=2;
}

message GetMfaQrcodeReply {
  api.common.v1.BaseResponse base = 1;
  string secret                   = 2;
  string qrcode                  = 3;
}

// ========= 绑定 MFA =========
message BindMfaRequest {
  string code   = 1; // 动态验证码
  string secret = 2;
  int64 id=3;
}

message BindMfaReply {
  api.common.v1.BaseResponse base = 1;
}

// ========= 以图搜图 =========
message SearchByImageRequest {
  bytes data                = 1; // 上传图片原始数据
  int64 id=2;
}

message SearchByImageReply {
  api.common.v1.BaseResponse base = 1;
  string url=2;
}